Fixing size of profile photos to reduce jumpiness when switching between profiles.

--- a/media/css/reader.css
+++ b/media/css/reader.css
@@ -7707,6 +7707,11 @@ form.opml_import_form input {
     max-height: 48px;
     border-radius: 3px;
 }
+.NB-profile-badge.NB-profile-badge-embiggen .NB-profile-badge-photo-wrapper {
+    width: 108px;
+    height: 108px;
+    vertical-align: middle;
+}
 .NB-profile-badge.NB-profile-badge-embiggen .NB-profile-badge-photo img {
     max-width: 108px;
     max-height: 108px;
